Addded GECaM and url to SCDC code

--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: June 19, 2023 --><html lang="en-us" >
+<!-- Last Published: March 7, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -822,7 +822,11 @@
                 
               </div>
 
-          
+          <div class="card-text"><ul>
+<li>Attended &ldquo;Beg Rohu summer school 2023&rdquo;.</li>
+<li>Senior tutor of the Physics I course at Politecnico di Torino.</li>
+</ul>
+</div>
         </div>
       </div>
     </div>
@@ -1032,7 +1036,7 @@
 
   
   <p class="powered-by copyright-license-text">
-    © 2023 Mattia Tarabolo. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2024 Mattia Tarabolo. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
